fix Qodana issues